--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     "tailwindcss": "^3.4.17",
     "vite": "^7.0.6"
   },
+  "engines":{
+    "node": "18.x"
+  },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "eslint.config.js",
   "keywords": [],
