--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,7 @@
 VITE_API_URL=http://localhost:5000
+
+VITE_API_URL = https://skillzmitra-1.onrender.com
+VITE_FIREBASE_API_KEY = AIzaSyA8xxhEKt526o2oxwAYgJQaicAMUe5NB8U
+VITE_FIREBASE_AUTH_DOMAIN = skill-82af2.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID = skill-82af2
+VITE_FIREBASE_APP_ID = 1:43136315307:web:5e038acf287b73d4ce2cee
